# backend

./: Dockerfile  LScribe_model_api.py  api.py  main.py  model.py  pyproject.toml  webScrap.py
