[tool.poetry]
name = "backend"
version = "0.0.1"
description = "LinkscribeBackend environment"
authors = ["jdmunoz"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
numpy = "^1.26.4"
scikit-learn = "^1.3.0"
bs4 = "^0.0.2"
requests = "^2.31.0"
imgkit = "^1.2.3"
wkhtmltopdf = "^0.2"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
